# instarand_benchmarking

./: README.md
data/on-chain/: results.xlsx
data/on-chain/transcripts/: crypto_operations.txt  dvrf.txt  flexirand.txt  instarand.txt  storage_operations.txt  vrf.txt
off-chain/: Cargo.toml
off-chain/benches/: dvrf.rs  flexirand.rs  instarand.rs  vrf.rs
off-chain/src/: lib.rs  main.rs
off-chain/src/crypto/: mod.rs  secp.rs
off-chain/src/crypto/bn/: hashes.rs  interpolation.rs  mod.rs  zkp_dl.rs  zkp_glow.rs
off-chain/src/impls/: bls_vrf.rs  flexirand_glow.rs  glow_dvrf.rs  goldberg_vrf.rs  instarand_client_goldberg.rs  mod.rs
off-chain/src/types/: dvrf.rs  flexirand.rs  instarand.rs  mod.rs  vrf.rs
on-chain/contracts/: BLS.sol  DDH.sol  crypto_operations.sol  dvrf.sol  flexirand.sol  instarand.sol  storage_operations.sol  vrf.sol
on-chain/scripts/: addresses.json  bench_crypto_operations.ts  bench_dvrf.ts  bench_flexirand.ts  bench_instarand.ts  bench_storage_operations.ts  bench_vrf.ts  input_factory.ts  web3-lib.ts
